// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component CardPopUp renders regular swap card pop up correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "rgba(34,34,34, 0.6)",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingHorizontal": 56,
          "paddingTop": 56,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "width": "100%",
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "",
            }
          }
          style={
            Array [
              Object {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "height": 613.6363636363636,
                "width": "100%",
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 76,
                "marginTop": 128,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="REGULAR"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "CalibreRegular",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            Swap
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="SEMI BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="LARGE"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Semibold",
                    "fontSize": 31.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                ]
              }
            >
                
            </Text>
            for tickets?
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 10,
                "marginVertical": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(116, 158, 253, 1)",
                "borderRadius": 88,
                "height": 176,
                "justifyContent": "center",
                "marginVertical": 48,
                "opacity": 1,
                "width": 542,
              }
            }
            testID="card-button"
          >
            <View
              borderRadius={44}
              colorScheme="rgba(165, 193, 255, 1)"
              height={88}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(165, 193, 255, 1)",
                    "borderRadius": 88,
                    "height": 166,
                    "justifyContent": "center",
                    "width": 536,
                  },
                ]
              }
              width={271}
            >
              <View
                borderRadius={44}
                colorScheme="rgba(127, 166, 253, 1)"
                height={88}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(127, 166, 253, 1)",
                      "borderRadius": 108,
                      "height": 162,
                      "justifyContent": "center",
                      "marginTop": 8,
                      "width": 536,
                    },
                  ]
                }
                width={271}
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XLARGE"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 36,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 24,
                        },
                      ]
                    }
                  >
                    Swap for 0 tickets
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "100%",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="button"
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="MEDIUM"
              isUnderlined={true}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 21,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#222222",
                    "marginBottom": 64,
                  },
                ]
              }
              testID="cancel-text-button"
            >
              Cancel and keep prize
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
              "position": "absolute",
              "right": 40,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "position": "absolute",
                "top": 533.6363636363636,
                "width": "100%",
              },
            ]
          }
        >
          <View>
            <View
              circleColor="#7C89D8"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#C4D1FA",
                    "borderColor": "#7C89D8",
                    "borderRadius": 85,
                    "borderWidth": 2,
                    "height": 170,
                    "justifyContent": "center",
                    "width": 170,
                  },
                ]
              }
            >
              <Image
                fullCircle={true}
                resizeMode="contain"
                source={1}
                style={
                  Array [
                    Object {
                      "borderRadius": 0,
                      "height": 64,
                      "width": 98,
                    },
                  ]
                }
              />
            </View>
            <View
              circleColor="#7C89D8"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#7C89D8",
                    "borderColor": "#7C89D8",
                    "borderRadius": 24,
                    "borderWidth": 2,
                    "bottom": -22,
                    "height": 44,
                    "justifyContent": "center",
                    "left": 44,
                    "position": "absolute",
                    "width": 88,
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="MEDIUM"
                isUnderlined={false}
                isUppercase={false}
                maxFontSizeMultiplier={1.3}
                size="XXSMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Calibre-Medium",
                      "fontSize": 21,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginTop": 8,
                    },
                  ]
                }
              >
                x0
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;

exports[`Component CardPopUp renders ship card pop up correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "rgba(34,34,34, 0.6)",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingHorizontal": 56,
          "paddingTop": 56,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "width": "100%",
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "",
            }
          }
          style={
            Array [
              Object {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "height": 613.6363636363636,
                "width": "100%",
              },
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 76,
                "marginTop": 128,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="REGULAR"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "CalibreRegular",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            Ship
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="SEMI BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="LARGE"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Semibold",
                    "fontSize": 31.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                ]
              }
            >
                
            </Text>
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 10,
                "marginVertical": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(96,202,142,1)",
                "borderRadius": 88,
                "height": 176,
                "justifyContent": "center",
                "marginVertical": 48,
                "opacity": 1,
                "width": 542,
              }
            }
            testID="card-button"
          >
            <View
              borderRadius={44}
              colorScheme="rgba(128,229,173,1)"
              height={88}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(128,229,173,1)",
                    "borderRadius": 88,
                    "height": 166,
                    "justifyContent": "center",
                    "width": 536,
                  },
                ]
              }
              width={271}
            >
              <View
                borderRadius={44}
                colorScheme="rgba(114,213,158,1)"
                height={88}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(114,213,158,1)",
                      "borderRadius": 108,
                      "height": 162,
                      "justifyContent": "center",
                      "marginTop": 8,
                      "width": 536,
                    },
                  ]
                }
                width={271}
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XLARGE"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 36,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 24,
                        },
                      ]
                    }
                  >
                    Ship now
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "100%",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="button"
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="MEDIUM"
              isUnderlined={true}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 21,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#222222",
                    "marginBottom": 64,
                  },
                ]
              }
              testID="cancel-text-button"
            >
              Cancel and save for later
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
              "position": "absolute",
              "right": 40,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "position": "absolute",
                "top": 533.6363636363636,
                "width": "100%",
              },
            ]
          }
        >
          <View>
            <View
              circleColor="#5EC98C"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#C4D1FA",
                    "borderColor": "#5EC98C",
                    "borderRadius": 85,
                    "borderWidth": 2,
                    "height": 170,
                    "justifyContent": "center",
                    "width": 170,
                  },
                ]
              }
            >
              <Image
                fullCircle={false}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 82,
                      "height": 164,
                      "width": 164,
                    },
                  ]
                }
              />
            </View>
            <View
              circleColor="#5EC98C"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#5EC98C",
                    "borderColor": "#5EC98C",
                    "borderRadius": 24,
                    "borderWidth": 2,
                    "bottom": -22,
                    "height": 44,
                    "justifyContent": "center",
                    "left": 44,
                    "position": "absolute",
                    "width": 88,
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="MEDIUM"
                isUnderlined={false}
                isUppercase={false}
                maxFontSizeMultiplier={1.3}
                size="XXSMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Calibre-Medium",
                      "fontSize": 21,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginTop": 8,
                    },
                  ]
                }
              >
                x1
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;
